<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Scheduler</string>
    <string name="add_profile">Add Profile</string>
    <string name="delete">Delete</string>
    <string name="revert">Revert</string>
    <string name="done">Done</string>
    <string name="set_profile">Create Profile</string>
    <string name="enable_profile">Turn profile on</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End Time</string>
    <string name="profile_repeat">Repeat</string>
    <string name="profile_vibrate">Vibrate</string>
    <string name="label">Label</string>
    <string name="profile_silent">Silent</string>
    <string name="never">Never</string>
    <string name="every_day">Every Day</string>
    <string name="day_concat">&quot;,&quot;</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="delete_profile_confirm">This Profile Will be Deleted</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="disable_profile">Disable Profile</string>

</resources>